--- a/index.html
+++ b/index.html
@@ -20,15 +20,10 @@
             alt="Жак-Ив Кусто"
           />
           <div class="profile-info">
-            <div class="profile-info__container">
-              <h1 class="profile-info__title">Жак-Ив Кусто</h1>
-              <button class="profile-info__edit-button" type="button">
-                <img
-                  src="./images/edit-button.svg"
-                  alt="кнопка редактировать"
-                />
-              </button>
-            </div>
+            <h1 class="profile-info__title">Жак-Ив Кусто</h1>
+            <button class="profile-info__edit-button" type="button">
+              <img src="./images/edit-button.svg" alt="кнопка редактировать" />
+            </button>
             <p class="profile-info__subtitle">Исследователь океана</p>
           </div>
           <button class="profile__add-button" type="button">
@@ -43,7 +38,7 @@
               alt="пятигорск"
             />
             <div class="element__info">
-              <h3 class="element__title">Пятигорск</h3>
+              <h2 class="element__title">Пятигорск</h2>
               <button
                 class="element__like element__like_active"
                 type="button"
@@ -57,7 +52,7 @@
               alt="мурманск"
             />
             <div class="element__info">
-              <h3 class="element__title">Мурманск</h3>
+              <h2 class="element__title">Мурманск</h2>
               <button class="element__like" type="button"></button>
             </div>
           </div>
@@ -68,7 +63,7 @@
               alt="пушкин"
             />
             <div class="element__info">
-              <h3 class="element__title">Пушкин</h3>
+              <h2 class="element__title">Пушкин</h2>
               <button class="element__like" type="button"></button>
             </div>
           </div>
@@ -79,7 +74,7 @@
               alt="карачаевск"
             />
             <div class="element__info">
-              <h3 class="element__title">Карачаевск</h3>
+              <h2 class="element__title">Карачаевск</h2>
               <button class="element__like" type="button"></button>
             </div>
           </div>
@@ -90,7 +85,7 @@
               alt="гора эльбрус"
             />
             <div class="element__info">
-              <h3 class="element__title">Гора Эльбрус</h3>
+              <h2 class="element__title">Гора Эльбрус</h2>
               <button class="element__like" type="button"></button>
             </div>
           </div>
@@ -101,7 +96,7 @@
               alt="домбай"
             />
             <div class="element__info">
-              <h3 class="element__title">Домбай</h3>
+              <h2 class="element__title">Домбай</h2>
               <button class="element__like" type="button"></button>
             </div>
           </div>
@@ -124,8 +119,8 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup__form">
           <div class="popup__inputs">
-            <input class="popup__input" name="name" />
-            <input class="popup__input" name="job" />
+            <input class="popup__input popup__form_input_name" name="name" />
+            <input class="popup__input popup__form_input_job" name="job" />
           </div>
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
