--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
         </form>
       </div>
     </div>
-    <script src="./app.js"></script>
+    <script src="./scripts/app.js"></script>
   </body>
 </html>
