--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <h2 class="popup__title">Редактировать профиль</h2>
         <form class="popup__form" name="popup__form">
           <div class="popup__inputs">
-            <input class="popup__input popup__form_input_name" name="name" />
-            <input class="popup__input popup__form_input_job" name="job" />
+            <input class="popup__input popup__input_name" name="name" />
+            <input class="popup__input popup__input_job" name="job" />
           </div>
           <button class="popup__button" type="submit">Сохранить</button>
         </form>
