--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
             </button>
             <p class="profile-info__subtitle">Исследователь океана</p>
           </div>
-          <button class="profile__add-button" type="button">
-            <img src="./images/add-button.svg" alt="кнопка добавить" />
-          </button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
           <div class="element">
