--- a/index.html
+++ b/index.html
@@ -29,82 +29,23 @@
           <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
-          <div class="element">
-            <img
-              class="element__photo"
-              src="./images/pyatigorsk.jpg"
-              alt="пятигорск"
-            />
-            <div class="element__info">
-              <h2 class="element__title">Пятигорск</h2>
-              <button
-                class="element__like element__like_active"
-                type="button"
-              ></button>
+          <template id="template-element">
+            <div class="element">
+              <img class="element__photo" src="#" />
+              <div class="element__info">
+                <h2 class="element__title"></h2>
+                <button class="element__like" type="button"></button>
+                <button class="element__delete" type="button"></button>
+              </div>
             </div>
-          </div>
-          <div class="element">
-            <img
-              class="element__photo"
-              src="./images/murmansk.jpg"
-              alt="мурманск"
-            />
-            <div class="element__info">
-              <h2 class="element__title">Мурманск</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img
-              class="element__photo"
-              src="./images/pushkin.jpg"
-              alt="пушкин"
-            />
-            <div class="element__info">
-              <h2 class="element__title">Пушкин</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img
-              class="element__photo"
-              src="./images/karachaevsk.jpg"
-              alt="карачаевск"
-            />
-            <div class="element__info">
-              <h2 class="element__title">Карачаевск</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img
-              class="element__photo"
-              src="./images/el'brus.jpg"
-              alt="гора эльбрус"
-            />
-            <div class="element__info">
-              <h2 class="element__title">Гора Эльбрус</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
-          <div class="element">
-            <img
-              class="element__photo"
-              src="./images/dombai.jpg"
-              alt="домбай"
-            />
-            <div class="element__info">
-              <h2 class="element__title">Домбай</h2>
-              <button class="element__like" type="button"></button>
-            </div>
-          </div>
+          </template>
         </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
       </footer>
     </div>
-    <div class="popup">
+    <div class="popup" id="popup-profile-edit">
       <div class="popup__overflow"></div>
       <div class="popup__container">
         <button class="popup__button-close" type="button">
@@ -115,7 +56,7 @@
           />
         </button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form class="popup__form" name="popup__form">
+        <form class="popup__form">
           <div class="popup__inputs">
             <input class="popup__input popup__input_name" name="name" />
             <input class="popup__input popup__input_job" name="job" />
@@ -124,6 +65,55 @@
         </form>
       </div>
     </div>
+
+    <div class="popup" id="popup-add-new-location">
+      <div class="popup__overflow"></div>
+      <div class="popup__container">
+        <button class="popup__button-close" type="button">
+          <img
+            class="popup__button-close-img"
+            src="./images/Close-Icon.svg"
+            alt="кнопка закрыть"
+          />
+        </button>
+        <h2 class="popup__title">Новое место</h2>
+        <form class="popup__form">
+          <div class="popup__inputs">
+            <input
+              class="popup__input popup__input_place-name"
+              name="placeName"
+              placeholder="Название"
+            />
+            <input
+              class="popup__input popup__input_link"
+              name="link"
+              placeholder="Ссылка на картинку"
+            />
+          </div>
+          <button class="popup__button" type="submit">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup" id="popup-gallery">
+      <div class="popup__overflow popup__overflow_gallery"></div>
+      <div class="popup__container popup__container_gallery">
+        <img
+          class="popup__gallery-image"
+          src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/chelyabinsk-oblast.jpg"
+        />
+        <p class="popup__caption">Челябинск</p>
+        <button class="popup__button-close" type="button">
+          <img
+            class="popup__button-close-img"
+            src="./images/Close-Icon.svg"
+            alt="кнопка закрыть"
+          />
+        </button>
+      </div>
+    </div>
+
     <script src="./scripts/app.js"></script>
+    <script src="./scripts/element.js"></script>
   </body>
 </html>
